--- a/libs/ptc-agent/pyproject.toml
+++ b/libs/ptc-agent/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
     "mypy>=1.5.0",
@@ -134,6 +135,9 @@ ignore-var-parameters = true
     "ANN201",  # Missing return type annotation
     "INP001",  # Implicit namespace package
     "PLR2004", # Magic value comparisons
+    "ANN001",  # Missing type annotation for fixture args
+    "ANN202",  # Missing return type for private functions
+    "E402",    # Module import not at top (intentional sys.path setup)
 ]
 "ptc_agent/agent/tools/grep.py" = ["N803"]  # A, B, C are ripgrep flags
 
@@ -147,6 +151,13 @@ warn_return_any = false
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests requiring real sandbox",
+]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
 
 [dependency-groups]
 dev = [
